Bug 383685 - Reject invalid enumeration values. r=tor,sr=roc,a=roc